<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="optionVM" type="com.falahsapplication.app.modules.option.data.viewmodel.OptionVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearOPTION"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtAccount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{optionVM.optionModel.txtAccount}"
            style="@style/txtOpenSansromanbold20" tools:text="@string/lbl_account"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_profile"
            android:id="@+id/etGroupEleven" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={optionVM.optionModel.etGroupElevenValue}"
            android:textColorHint="@color/black_900_6b"
            android:textSize="@dimen/_15sp"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_history"
            android:id="@+id/etGroupTen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:textSize="15sp"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={optionVM.optionModel.etGroupTenValue}"
            android:textColorHint="@color/black_900_6b"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{optionVM.optionModel.txtLanguage}"
            style="@style/txtOpenSansromanbold20" tools:text="@string/lbl_language"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_english"
            android:id="@+id/etLanguageOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={optionVM.optionModel.etLanguageOneValue}"
            android:textColorHint="@color/black_900_6b"
            android:textSize="15sp"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_indonesia"
            android:id="@+id/etCountry" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={optionVM.optionModel.etCountryValue}"
            android:textColorHint="@color/black_900_6b"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLogout"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{optionVM.optionModel.txtLogout}"
            style="@style/txtOpenSansromanbold20" tools:text="@string/lbl_log_out"/>

        <EditText
            android:id="@+id/etGroupNine"
            style="@style/etSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:background="@drawable/rectangle_bg_white_a700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_log_out"
            android:inputType="text"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:textSize="15sp"
            android:singleLine="true"
            android:text="@={optionVM.optionModel.etGroupNineValue}"
            android:textColorHint="@color/black_900_6b"
            tools:ignore="Autofill" />
    </LinearLayout>
</layout>
