<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="createAccountVM" type="com.falahsapplication.app.modules.createaccount.data.viewmodel.CreateAccountVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearCreateaccount"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearCreateacc"
            android:layout_height="wrap_content"
            android:layout_marginEnd="41dp"
            android:layout_marginStart="41dp"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtCreateyourAcc"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{createAccountVM.createAccountModel.txtCreateyourAcc}"
                style="@style/txtOpenSansromanbold20" tools:text="@string/msg_create_your_acc"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end" android:hint="@string/lbl_nama"
                android:id="@+id/etGroupTwentyEight"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentyEightValue}"
                android:textSize="20sp"
                android:textColorHint="@color/black_900_6b"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end" android:hint="@string/lbl_age"
                android:id="@+id/etGroupTwentySeven"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentySevenValue}"
                android:textColorHint="@color/black_900_6b"
                android:textSize="@dimen/_20sp"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_birthday"
                android:id="@+id/etGroupTwentySix"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentySixValue}"
                android:textColorHint="@color/black_900_6b"
                android:textSize="20sp"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end" android:hint="@string/lbl_email"
                android:id="@+id/etGroupTwentyFive"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentyFiveValue}"
                android:textColorHint="@color/black_900_6b"
                android:textSize="20sp"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etGroupTwentyFour"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentyFourValue}"
                android:textColorHint="@color/black_900_6b"
                android:textSize="20sp"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_8"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_passwor"
                android:id="@+id/etGroupTwentyThree"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={createAccountVM.createAccountModel.etGroupTwentyThreeValue}"
                android:textColorHint="@color/black_900_6b"
                android:textSize="20sp"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignIn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_56pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_in"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in"/>
        </LinearLayout>
    </LinearLayout>
</layout>
